Bug 387254 - kcookiejar misparses non-rfc2822 dates in cookies
Summary: kcookiejar misparses non-rfc2822 dates in cookies
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kio
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.32.0
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: David Faure
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-11-24 10:26 UTC by Andreas Schwab
Modified: 2018-01-05 22:02 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Schwab 2017-11-24 10:26:32 UTC
kcookiejar is using locale-aware Qt functions to parse the dates in cookies, which fails when running in a non-English locale.  It should instead use the C locale, so that the English month names are recognized.
Comment 1 Albert Astals Cid 2018-01-05 22:02:11 UTC
Git commit 75b2e3deebd42a3753fe2971a5f4a2a26edcab69 by Albert Astals Cid, on behalf of Andreas Schwab.
Committed on 05/01/2018 at 22:02.
Pushed by aacid into branch 'master'.

Properly parse dates in cookies when running in non-English  locale

Summary:
Use the C locale when parsing dates in cookies, since only English week
and month names are allowed

Reviewers: dfaure, #frameworks

Reviewed By: dfaure

Subscribers: anthonyfieroni, #frameworks

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D8983

M  +8    -3    src/ioslaves/http/kcookiejar/kcookiejar.cpp

https://commits.kde.org/kio/75b2e3deebd42a3753fe2971a5f4a2a26edcab69