Properly parse dates in cookies when running in non-English  locale

Summary:
Use the C locale when parsing dates in cookies, since only English week
and month names are allowed

BUG: 387254

Reviewers: dfaure, #frameworks

Reviewed By: dfaure

Subscribers: anthonyfieroni, #frameworks

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D8983